--- a/docs/themes/thxvscode/layouts/partials/apiNav.html
+++ b/docs/themes/thxvscode/layouts/partials/apiNav.html
@@ -39,6 +39,12 @@
 {{ $api_home_active := and .IsSection $in_api_section }}
 {{ $section := .CurrentSection }}
 {{ $packagePages := where .Site.RegularPages "Params.kind" "Package"}}
+{{ $selectedApiVersion = index (split (trim $current.RelPermalink "/" ) "/") 2 }}
+{{ $isNotSelectApiVersion := (not (in $allVersions $selectedApiVersion)) }}
+{{ if $isNotSelectApiVersion}}
+    {{ $selectedApiVersion = $.Site.Data.versions.params.currentVersion }}
+{{ end }}
+{{ $versionLink := printf "/docs/api/%s" $selectedApiVersion }}
 
 <!-- {{ printf "%#v" .Kind }}
 {{ printf "%#v" $in_api_section }} -->
@@ -88,12 +94,6 @@
     </ul>
     <hr/>
     <ul class="nav" id="api-overview-nav">
-        {{ $selectedApiVersion := trim $current.RelPermalink "/" }}
-        {{ $selectedApiVersion = index (split $selectedApiVersion "/") 2 }}
-        {{ $isNotSelectApiVersion := (not (in $allVersions $selectedApiVersion)) }}
-        {{ if $isNotSelectApiVersion}}
-            {{ $selectedApiVersion = $.Site.Data.versions.params.currentVersion }}
-        {{ end }}
         {{ $apiOverviewPage := printf "%s%s" $.Site.Data.versions.apiDocsDirectory $selectedApiVersion }}
          <li {{ if in $current.RelPermalink "/docs/api" }} class="active" {{ end }}>
             <a class="docs-home" href={{$apiOverviewPage}} {{ if $api_home_active }}
@@ -112,11 +112,13 @@
         </li>
     </ul>
     {{ $packages := index $.Site.Data.packages $selectedApiVersion }}
-    {{ $DDSes := index $packages "DDSes" }}
+    {{ $FluidFramework := index $packages "FluidFramework" }}
+    {{ $DDSes := index $FluidFramework "DDSes" }}
     {{ $resultArray := slice "fluid-framework" }}
+    
     {{ $isPackageActive := false }}
-    {{ range $DDSes }}
-        {{ $resultArray = $resultArray | append (index (split . "/") 1) }}
+    {{ range $DDS, $subCategories := $DDSes }}
+        {{ $resultArray = $resultArray | append (lower $DDS) }}
     {{ end }}
 
     
@@ -130,7 +132,7 @@
         <li class="panel {{ if $isPackageActive }}active expanded{{ end }}">
             <a class="area" href="#fluid-framework-reference" data-parent="#fluid-framework-nav" data-toggle="collapse">Fluid Framework</a>
             <ul id="fluid-framework-reference" class="collapse {{ if $isPackageActive }}in{{ end }}">
-                {{ $FFLink := printf "/docs/api/%s/fluid-framework" $selectedApiVersion }}
+                {{ $FFLink := printf "%s/fluid-framework" $versionLink }}
                 {{ $isActive := eq (add $FFLink "/") $current.RelPermalink }}
                 <li class="panel {{if $isActive }}active{{end}}">
                     <a class="area{{if $isActive }} active expanded{{ end }} nav-page" href="{{ $FFLink }}">Complete Reference</a>
@@ -139,8 +141,9 @@
                 {{ $specificCategories := slice "Audience" "Container" }}
                 {{ $activeCategory := "" }}
                 {{ $activeSubCategory := "" }}
+                {{ $activeAPI := "" }}
                 {{ range $categoryName := $specificCategories }}
-                    {{ $category := index $packages $categoryName }}
+                    {{ $category := index $FluidFramework $categoryName }}
                     {{ range $subcategoryName, $APIs := $category }}
                         {{ range $api := $APIs }}
                             {{ $link := printf "%s/%s-%s" $FFLink (lower $api) (lower $subcategoryName | singularize) }}
@@ -151,13 +154,14 @@
                             {{ if in $current.RelPermalink $link }}
                                 {{ $activeCategory = $categoryName }}
                                 {{ $activeSubCategory = $subcategoryName }}
+                                {{ $activeAPI = $api }}
                             {{ end }}
                         {{ end }}
                     {{ end }}
                 {{ end }}
                 
                 {{ range $categoryName := $specificCategories }}
-                    {{ $category := index $packages $categoryName }}
+                    {{ $category := index $FluidFramework $categoryName }}
                     {{ $isCategoryActive := eq $activeCategory $categoryName }}
                     <li class="panel {{ if $isCategoryActive }}active expanded{{ else }}collapsed{{ end }}">
                         <a class="area" href="#{{ $categoryName }}-articles" data-toggle="collapse">{{ $categoryName }}</a>
@@ -168,13 +172,13 @@
                                     <a class="area padding-35px" href="#{{ $categoryName }}-{{ $subcategoryName }}-articles" data-toggle="collapse">{{ $subcategoryName }}</a>
                                     <ul id="{{ $categoryName }}-{{ $subcategoryName }}-articles" class="collapse {{ if $isSubCategoryActive }}in{{ end }}">
                                         {{ range $api := $APIs }}
-                                            {{ $link := printf "%s/%s-%s" $FFLink (lower $api) (lower $subcategoryName | singularize) }}
+                                            {{ $apiLink := printf "%s/%s-%s" $FFLink (lower $api) (lower $subcategoryName | singularize) }}
                                             {{ if eq $subcategoryName "Types" }}
-                                                {{ $link = printf "%s/%s-typealias" $FFLink (lower $api) }}                                               
+                                                {{ $apiLink = printf "%s/%s-typealias" $FFLink (lower $api) }}                                               
                                             {{ end }}
-                                            {{ $isActive = in $current.RelPermalink $link }}
-                                            <li class="panel {{ if $isActive }}active expanded{{ else }}collapsed{{ end }}">
-                                                <a class="padding-45px nav-page" href="{{ $link }}">
+                                            {{ $isAPIActive := eq $activeAPI $api }}
+                                            <li class="panel {{ if $isAPIActive }}active expanded{{ else }}collapsed{{ end }}">
+                                                <a class="leaf-node nav-page padding-45px" href="{{ $apiLink }}">
                                                     {{ partial "breakOnCapitals.html" $api }}
                                                 </a>
                                             </li>
@@ -200,78 +204,57 @@
                 <li class="panel {{ if $isDDSActive }}active expanded{{ else }}collapsed{{ end }}">
                     <a class="area" href="#dds-articles" data-toggle="collapse">DDSes</a>
                     <ul id="dds-articles" class="collapse {{ if $isDDSActive }}in{{ end }}">
-                        {{- range $DDSes }}
-                            {{ $targetPage := $current }}
-                            {{- range (where $packagePages "Params.package" .) -}}
-                                {{ $currentApiVersion := index (split (trim .RelPermalink "/") "/") 2}}
-                                {{if eq $currentApiVersion $selectedApiVersion}} 
-                                    {{ $targetPage = . }}
-                                    {{ $versionData := index $.Site.Data $selectedApiVersion }}
-                                    
-                                    {{ $packageNameToDisplayName := index $versionData "packageNameToDisplayName"}}
-                                    {{ $packageKey := index $packageNameToDisplayName $targetPage.Params.package }}
-                                    
-                                    {{ $allApis := index $versionData "allAPIs"}}
-                                    {{ $apiDetails := index $allApis $packageKey }}
+                        {{ range $DDS, $subCategories := $DDSes }}
+                            {{ $DDSLink := print $versionLink "/" (lower $DDS) }}
+                            {{ $isCurrentPage := in (trim $current.RelPermalink " ") (trim $DDSLink " ") }}
+                            {{ $hasActiveLeaf := false }}
+                            {{ range $category, $APIs := $subCategories }}
+                                {{ $categoryLower := lower $category | singularize }}
+                                {{ range $api := $APIs }}
+                                    {{ $currentTrimmedLink := trim $current.RelPermalink " " }}
+                                    {{ $isActiveItem := in $currentTrimmedLink (trim (print (lower $api) "-" $categoryLower "/") " ") }}
+                                    {{ if $isActiveItem }} {{ $hasActiveLeaf = true }} {{ end }}
+                                {{ end }}
+                            {{ end }}
 
-                                    {{ $isCurrentPage := in (trim $current.RelPermalink " ") (trim $targetPage.RelPermalink " ") }}
-                                    {{ $hasActiveLeaf := false }}
-                                    {{ range $category := slice "Interface" "Class" "Enum" }}
-                                        {{ if isset $apiDetails $category }}
-                                            {{ $currentTrimmedLink := trim $current.RelPermalink " " }}
-                                            {{ $categoryLower := lower $category }}
+                            <li class="panel {{ if $isCurrentPage }}active{{ end }} {{ if $hasActiveLeaf }}active-leaf{{ end }}">
+                                <a href="{{ $DDSLink }}"
+                                class="packages nav-page padding-35px"
+                                data-toggle="collapse"
+                                data-target="#leaf-docs-nav"
+                                {{ if $isCurrentPage }}aria-label="Current Page: {{ $DDS | humanize | title }}"{{ end }}>
+                                    {{ $DDS | humanize | title }}
+                                </a>
+                                <ul id="leaf-docs-nav" class="leaf-docs-nav collapse {{ if $isCurrentPage }}in{{ end }}">
 
-                                            {{ range $item := index $apiDetails $category }}
-                                                {{ $isActiveItem := in $currentTrimmedLink (trim (print (lower $item) "-" $categoryLower "/") " ") }}
-                                                {{ if $isActiveItem }} {{ $hasActiveLeaf = true }} {{ end }}
-                                            {{ end }}
-                                        {{ end }}
-                                    {{ end }}
-                                    <li class="panel {{ if $isCurrentPage }}active{{ end }} {{ if $hasActiveLeaf }}active-leaf{{ end }}">
+                                    {{ range $category, $APIs := $subCategories }}
+                                        {{ $currentTrimmedLink := trim $current.RelPermalink " " }}
+                                        {{ $categoryLower := lower $category | singularize }}
+                                        {{ $isCategoryActive := in $currentTrimmedLink $categoryLower }}
 
-                                        <a href="{{$targetPage.RelPermalink}}" 
-                                        class="packages nav-page padding-35px" 
-                                        data-toggle="collapse" 
-                                        data-target="#leaf-docs-nav" 
-                                        {{ if $isCurrentPage }}aria-label="Current Page: {{ (path.Base $targetPage.RelPermalink) | humanize | title }}"{{ end }}>
-                                            {{ (path.Base $targetPage.RelPermalink) | humanize | title }}
-                                        </a>
-                                        <ul id="leaf-docs-nav" class="leaf-docs-nav collapse {{ if $isCurrentPage }}in{{ end }}">
-                                            {{ $plurals := dict "Interface" "Interfaces" "Class" "Classes" "Enum" "Enums" }}
-        
-                                            {{ range $category := slice "Interface" "Class" "Enum" }}
-                                                {{ if isset $apiDetails $category }}
-                                                    {{ $currentTrimmedLink := trim $current.RelPermalink " " }}
-                                                    {{ $categoryLower := lower $category }}
-                                                    {{ $isCategoryActive := in $currentTrimmedLink $categoryLower }}
-                                                    {{ $categoryPlural := index $plurals $category }}
-        
-                                                    <li class="panel type-definitions {{ if $isCategoryActive }}active expanded{{ else }}collapsed{{ end }}">
-                                                        <div href="#" class="api-item-kind {{ $categoryLower }}-link padding-45px" 
-                                                            data-toggle="collapse" data-target="#dds-{{ $packageKey }}-{{ $category }}-content"
-                                                        >
-                                                            {{ $categoryPlural }}
-                                                        </div>
-                                                        
-                                                        <ul id="dds-{{ $packageKey }}-{{ $category }}-content" class="collapse {{ if $isCategoryActive }}in{{ end }}">
-                                                            {{ range $item := index $apiDetails $category }}
-                                                                {{ $itemLink := print (relURL $.Site.Data.versions.apiDocsDirectory) $selectedApiVersion "/" $packageKey "/" (lower $item) "-" $categoryLower }}
-                                                                {{ $isActiveItem := in $currentTrimmedLink (trim (print (lower $item) "-" $categoryLower "/") " ") }}
-                                                                <li class="{{ if $isActiveItem }}active expanded{{ else }}collapsed{{ end }}">
-                                                                    <a class="nav-page padding-55px" href="{{ $itemLink }}" {{ if $isActiveItem }}aria-label="Current Page: {{ $item }} {{ $categoryPlural }}"{{ end }}>
-                                                                        {{ partial "breakOnCapitals.html" $item }}
-                                                                    </a>
-                                                                </li>
-                                                            {{ end }}
-                                                        </ul>
+                                        <li class="panel type-definitions {{ if $isCategoryActive }}active expanded{{ else }}collapsed{{ end }}">
+                                            <div href="#" class="api-item-kind {{ $categoryLower }}-link padding-45px" 
+                                                data-toggle="collapse" data-target="#dds-{{ $DDS }}-{{ $categoryLower }}-content"
+                                            >
+                                                {{ $category }}
+                                            </div>
+                                            
+                                            <ul id="dds-{{ $DDS }}-{{ $categoryLower }}-content" class="collapse {{ if $isCategoryActive }}in{{ end }}">
+                                                {{ range $api := $APIs }}
+                                                    {{ $apiLink := print (relURL $.Site.Data.versions.apiDocsDirectory) $selectedApiVersion "/" (lower $DDS) "/" (lower $api) "-" ($categoryLower | singularize) }}
+                                                    {{ $isActiveAPI := in $currentTrimmedLink (trim (print (lower $api) "-" $categoryLower "/") " ") }}
+                                                    <li class="{{ if $isActiveAPI }}active expanded{{ else }}collapsed{{ end }}">
+                                                        <a class="leaf-node nav-page padding-55px" href="{{ $apiLink }}" {{ if $isActiveAPI }}aria-label="Current Page: {{ $api }} {{ $category }}"{{ end }}>
+                                                            {{ partial "breakOnCapitals.html" $api }}
+                                                        </a>
                                                     </li>
                                                 {{ end }}
-                                            {{ end }}
-                                        </ul>
-                                    </li>
-                                {{ end }}
-                            {{- end }}
-                        {{- end }}
+                                            </ul>
+                                        </li>
+                                    {{ end }}
+                                </ul>
+                            </li>
+                        {{ end }}
                     </ul>
                 </li>
             </ul>
@@ -344,7 +327,7 @@
                                                         {{ $itemLink := print (relURL $.Site.Data.versions.apiDocsDirectory) $selectedApiVersion "/" $packageKey "/" (lower $item) "-" $categoryLower }}
                                                         {{ $isActiveItem := in $currentTrimmedLink (trim (print (lower $item) "-" $categoryLower "/") " ") }}
                                                         <li class="{{ if $isActiveItem }}active expanded{{ else }}collapsed{{ end }}">
-                                                            <a class="leaf-node nav-page" href="{{ $itemLink }}" {{ if $isActiveItem }}aria-label="Current Page: {{ $item }} {{ $categoryPlural }}"{{ end }}>
+                                                            <a class="leaf-node nav-page padding-45px" href="{{ $itemLink }}" {{ if $isActiveItem }}aria-label="Current Page: {{ $item }} {{ $categoryPlural }}"{{ end }}>
                                                                 {{ partial "breakOnCapitals.html" $item }}
                                                             </a>
                                                         </li>
