add fetch request to head.html to call az function

--- a/docs/themes/thxvscode/layouts/partials/head.html
+++ b/docs/themes/thxvscode/layouts/partials/head.html
@@ -7,6 +7,12 @@
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+    <script>
+        (async function() {
+            const { text } = await( await fetch(`/api/fallback`)).json();
+            console.log({ text });
+        }());
+    </script>
 
     <!-- Twitter and Facebook OpenGraph Metadata-->
     <meta name="twitter:card" content="summary_large_image" />
