--- a/docs/themes/thxvscode/layouts/partials/head.html
+++ b/docs/themes/thxvscode/layouts/partials/head.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     <script>
         (async function() {
-            const { text } = await( await fetch(`/api/httptest`)).json();
-            console.log({ text });
+            const { text, pathname, route, status } = await( await fetch(`/api/httptest`)).json();
+            console.log({ text, pathname, route, status });
         }());
     </script>
 
